--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -18,6 +18,7 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "css-loader": "^0.25.0",
+    "postcss-cssnext": "^2.8.0",
     "postcss-loader": "^0.13.0",
     "precss": "^1.4.0",
     "style-loader": "^0.13.1",
