--- a/04-vue-ssr/package.json
+++ b/04-vue-ssr/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server --open --hot"
   },
   "keywords": [],
   "author": "",
@@ -15,9 +16,12 @@
     "vue-loader": "^12.2.1",
     "vue-template-compiler": "^2.3.4",
     "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0"
+    "webpack-dev-server": "^2.5.0",
+    "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
-    "vue": "^2.3.4"
+    "vue": "^2.3.4",
+    "vue-router": "^2.6.0",
+    "vue-server-renderer": "^2.3.4"
   }
 }
