--- a/04-vue-ssr/package.json
+++ b/04-vue-ssr/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "vue": "^2.3.4",
     "vue-router": "^2.6.0",
-    "vue-server-renderer": "^2.3.4"
+    "vue-server-renderer": "^2.3.4",
+    "vuex": "^2.3.1",
+    "vuex-router-sync": "^4.2.0"
   }
 }
