add ssr buildbundeRender config

--- a/04-vue-ssr/package.json
+++ b/04-vue-ssr/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --hot"
+    "dev": "webpack-dev-server --open --hot --config ./build/webpack.config-client.js"
   },
   "keywords": [],
   "author": "",
