--- a/04-vue-ssr/package.json
+++ b/04-vue-ssr/package.json
@@ -20,6 +20,7 @@
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
+    "lru-cache": "^4.1.1",
     "vue": "^2.3.4",
     "vue-router": "^2.6.0",
     "vue-server-renderer": "^2.3.4",
