--- a/05-vue-ssr-news/package.json
+++ b/05-vue-ssr-news/package.json
@@ -13,11 +13,14 @@
   "devDependencies": {
     "eslint": "^4.1.1",
     "eslint-loader": "^1.8.0",
+    "express": "^4.15.3",
     "html-webpack-plugin": "^2.29.0",
     "vue-loader": "^12.2.1",
     "vue-template-compiler": "^2.3.4",
     "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0"
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-dev-server": "^2.5.0",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
     "vue": "^2.3.4"
