add vue ssr server/client config

--- a/05-vue-ssr-news/package.json
+++ b/05-vue-ssr-news/package.json
@@ -20,9 +20,11 @@
     "webpack": "^3.0.0",
     "webpack-dev-middleware": "^1.11.0",
     "webpack-dev-server": "^2.5.0",
-    "webpack-hot-middleware": "^2.18.0"
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
-    "vue": "^2.3.4"
+    "vue": "^2.3.4",
+    "vue-server-renderer": "^2.3.4"
   }
 }
