--- a/06-chunks-and-vendors/package.json
+++ b/06-chunks-and-vendors/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "html-webpack-plugin": "^2.29.0",
     "webpack": "^3.0.0"
   },
   "dependencies": {
