--- a/04-vue-ssr/package.json
+++ b/04-vue-ssr/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --hot --config ./build/webpack.config-client.js"
+    "dev": "webpack-dev-server --open --hot --config ./build/webpack.config-client.js",
+    "build-client": "webpack --config ./build/webpack.config-client.js",
+    "build-server": "webpack --config ./build/webpack.config-server.js"
   },
   "keywords": [],
   "author": "",
