--- a/07-prerender-spa/package.json
+++ b/07-prerender-spa/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "prerender-spa-plugin": "^2.0.1",
     "vue": "^2.3.4",
     "vue-router": "^2.7.0"
   },
