--- a/06-chunks-and-vendors/package.json
+++ b/06-chunks-and-vendors/package.json
@@ -13,8 +13,5 @@
     "html-webpack-plugin": "^2.29.0",
     "webpack": "^3.0.0"
   },
-  "dependencies": {
-    "jquery": "^3.2.1",
-    "lodash": "^4.17.4"
-  }
+  "dependencies": {}
 }
