--- a/06-chunks-and-vendors/package.json
+++ b/06-chunks-and-vendors/package.json
@@ -13,5 +13,7 @@
     "html-webpack-plugin": "^2.29.0",
     "webpack": "^3.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lodash": "^4.17.4"
+  }
 }
