--- a/01-guide/package.json
+++ b/01-guide/package.json
@@ -14,8 +14,10 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.6",
+    "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.19.1"
   }
 }
